updated Report formatting, made FCI work properly

--- a/Docmentation/Report.bib
+++ b/Docmentation/Report.bib
@@ -73,7 +73,7 @@ keywords = "Ancestral graphs, Automated causal discovery, Bayesian networks, Cau
 }
 
 @article{pearl2009,
-author = "Pearl, Judea",
+
 doi = "10.1214/09-SS057",
 fjournal = "Statistics Surveys",
 journal = "Statist. Surv.",
@@ -82,6 +82,7 @@ publisher = "The American Statistical Association, the Bernoulli Society, the In
 title = "Causal inference in statistics: An overview",
 url = "https://doi.org/10.1214/09-SS057",
 volume = "3",
+author ="Judea Pearl",
 year = "2009"
 }
 
