began to organise references

--- a/Docmentation/Report.bib
+++ b/Docmentation/Report.bib
@@ -42,6 +42,15 @@ keywords = "Ancestral graphs, Automated causal discovery, Bayesian networks, Cau
   publisher={JSTOR}
 }
 
+@article{colombo2012learning2,
+	title={). Supplement to “Learning high-dimensional directed acyclic graphs with latent and selection
+	variables},
+	author={Colombo, Diego and Maathuis, Marloes H and Kalisch, Markus and Richardson, Thomas S},
+	journal={The Annals of Statistics},
+	year={2012},
+	publisher={JSTOR}
+}
+
 @article{zhang2008causal,
   title={Causal reasoning with ancestral graphs},
   author={Zhang, Jiji},
@@ -102,3 +111,103 @@ year = "2009"
   year={1991},
   publisher={Sage Publications Sage CA: Thousand Oaks, CA}
 }
+
+@misc{kalisch_hauser_maechler, 
+	title={Methods for Graphical Models and Causal Inference [R package pcalg version 2.6-0]},
+	url={https://cran.r-project.org/web/packages/pcalg/index.html},
+	journal={The Comprehensive R Archive Network}, 
+	publisher={Comprehensive R Archive Network (CRAN)},
+	author={Kalisch, Markus and Hauser, Alain and Maechler , Martin}
+}
+
+@misc{piatetsky, title={KDnuggets}, url={https://www.kdnuggets.com/2018/05/poll-tools-analytics-data-science-machine-learning-results.html}, journal={KDnuggets Analytics Big Data Data Mining and Data Science}, author={Piatetsky, Gregory}}
+
+@misc{ogrady_2019, title={The RedMonk Programming Language Rankings: January 2019}, url={https://redmonk.com/sogrady/2019/03/20/language-rankings-1-19/}, journal={tecosystems}, author={O'Grady , Stephen}, year={2019}, month={Mar}}
+
+@article{Pearson,
+	author = { Karl   Pearson   F.R.S. },
+	title = {X. On the criterion that a given system of deviations from the probable in the case of a correlated system of variables is such that it can be reasonably supposed to have arisen from random sampling},
+	journal = {The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
+	volume = {50},
+	number = {302},
+	pages = {157-175},
+	year  = {1900},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/14786440009463897},
+	
+	URL = { 
+	https://doi.org/10.1080/14786440009463897
+	
+	},
+	eprint = { 
+	https://doi.org/10.1080/14786440009463897
+	
+	}
+	
+}
+
+@book{barber_2012, place={Cambridge}, title={Bayesian Reasoning and Machine Learning}, DOI={10.1017/CBO9780511804779}, publisher={Cambridge University Press}, author={Barber, David}, year={2012}}
+
+
+@inproceedings{royce1987managing,
+	title={Managing the development of large software systems: concepts and techniques},
+	author={Royce, Winston W},
+	booktitle={Proceedings of the 9th international conference on Software Engineering},
+	pages={328--338},
+	year={1987},
+	organization={IEEE Computer Society Press}
+}
+
+@misc{beck2001agile,
+	added-at = {2007-12-30T11:39:05.000+0100},
+	author = {Beck, Kent and Beedle, Mike and van Bennekum, Arie and Cockburn, Alistair and Cunningham, Ward and Fowler, Martin and Grenning, James and Highsmith, Jim and Hunt, Andrew and Jeffries, Ron and Kern, Jon and Marick, Brian and Martin, Robert C. and Mellor, Steve and Schwaber, Ken and Sutherland, Jeff and Thomas, Dave},
+	biburl = {https://www.bibsonomy.org/bibtex/28954248a545d88dd2c0e688d1c7e2f9d/juve},
+	booktitle = {Manifesto for Agile Software Development},
+	description = {Manifesto for Agile Software Development},
+	interhash = {098cc7e185f10c3da390459a01e0d535},
+	intrahash = {8954248a545d88dd2c0e688d1c7e2f9d},
+	keywords = {imported},
+	timestamp = {2007-12-30T11:39:05.000+0100},
+	title = {Manifesto for Agile Software Development},
+	url = {http://www.agilemanifesto.org/},
+	year = 2001
+}
+
+@article{boehm1988spiral,
+	title={A spiral model of software development and enhancement},
+	author={Boehm, Barry W},
+	journal={Computer},
+	number={5},
+	pages={61--72},
+	year={1988},
+	publisher={IEEE}
+}
+
+@incollection{schwaber1997scrum,
+	title={Scrum development process},
+	author={Schwaber, Ken},
+	booktitle={Business object design and implementation},
+	pages={117--134},
+	year={1997},
+	publisher={Springer}
+}
+
+@book{cohn2004user,
+	title={User stories applied: For agile software development},
+	author={Cohn, Mike},
+	year={2004},
+	publisher={Addison-Wesley Professional}
+}
+
+@article{janzen2005test,
+	title={Test-driven development concepts, taxonomy, and future direction},
+	author={Janzen, David and Saiedian, Hossein},
+	journal={Computer},
+	volume={38},
+	number={9},
+	pages={43--50},
+	year={2005},
+	publisher={IEEE}
+}
+
+@misc{Numpy, title={Example NumPy Style Python Docstrings¶}, url={https://sphinxcontrib-napoleon.readthedocs.io/en/latest/example_numpy.html}, journal={Example NumPy Style Python Docstrings - napoleon 0.7 documentation}}
