Fully documented code, edited report

--- a/Docmentation/Report.bib
+++ b/Docmentation/Report.bib
@@ -211,3 +211,27 @@ year = "2009"
 }
 
 @misc{Numpy, title={Example NumPy Style Python Docstrings¶}, url={https://sphinxcontrib-napoleon.readthedocs.io/en/latest/example_numpy.html}, journal={Example NumPy Style Python Docstrings - napoleon 0.7 documentation}}
+
+@misc{pandas, title={Python Data Analysis Library¶}, url={https://pandas.pydata.org/}, journal={pandas}}
+
+@misc{networkx, title={NetworkX}, url={https://networkx.github.io/}, journal={NetworkX}}
+
+@misc{scipy, title={Statistical functions (scipy.stats)¶}, url={https://docs.scipy.org/doc/scipy/reference/stats.html}, journal={Statistical functions (scipy.stats) - SciPy v1.2.1 Reference Guide}}
+
+@misc{numpy, title={NumPy¶}, url={http://www.numpy.org/}, journal={NumPy}}
+
+@misc{data, url={https://www.cs.york.ac.uk/aig/sw/gobnilp/data/}, journal={GOBNILP DATA}}
+
+@misc{cython, title={C-Extensions for Python}, url={https://cython.org/}, journal={Cython}}
+
+@article{wilbers2009using,
+	title={Using cython to speed up numerical python programs},
+	author={Wilbers, Ilmar M and Langtangen, Hans Petter and {\O}deg{\aa}rd, {\AA}smund},
+	journal={Proceedings of MekIT},
+	volume={9},
+	pages={495--512},
+	year={2009}
+}
+
+@misc{wilkinson_2014, title={Gibbs sampler in various languages (revisited)}, url={https://darrenjw.wordpress.com/2011/07/16/gibbs-sampler-in-various-languages-revisited/}, journal={Darren Wilkinson's research blog}, publisher={Gibbs sampler in various languages }, author={Wilkinson, Darren j}, year={2014}, month={Nov}}
+
