--- a/Docmentation/Report.bib
+++ b/Docmentation/Report.bib
@@ -43,7 +43,7 @@ keywords = "Ancestral graphs, Automated causal discovery, Bayesian networks, Cau
 }
 
 @article{colombo2012learning2,
-	title={). Supplement to “Learning high-dimensional directed acyclic graphs with latent and selection
+	title={Supplement to “Learning high-dimensional directed acyclic graphs with latent and selection
 	variables},
 	author={Colombo, Diego and Maathuis, Marloes H and Kalisch, Markus and Richardson, Thomas S},
 	journal={The Annals of Statistics},
@@ -69,6 +69,11 @@ keywords = "Ancestral graphs, Automated causal discovery, Bayesian networks, Cau
   pages={507--534},
   year={1990},
   publisher={Wiley Online Library}
+}
+
+@inproceedings{spirtes2001anytime,
+	title={An Anytime Algorithm for Causal Inference.},
+	author={Spirtes, Peter}
 }
 
 @article{pearl2003causality,
@@ -235,3 +240,14 @@ year = "2009"
 
 @misc{wilkinson_2014, title={Gibbs sampler in various languages (revisited)}, url={https://darrenjw.wordpress.com/2011/07/16/gibbs-sampler-in-various-languages-revisited/}, journal={Darren Wilkinson's research blog}, publisher={Gibbs sampler in various languages }, author={Wilkinson, Darren j}, year={2014}, month={Nov}}
 
+
+@article{colombo2014order,
+	title={Order-independent constraint-based causal structure learning},
+	author={Colombo, Diego and Maathuis, Marloes H},
+	journal={The Journal of Machine Learning Research},
+	volume={15},
+	number={1},
+	pages={3741--3782},
+	year={2014},
+	publisher={JMLR. org}
+}
